--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 		<div id="sections">
 			<div class="section group">	
 				<div class="col span_1_of_3">			
-					<a class="shrink" href="aboutme.html"><img src="aboutmepic.jpg" alt="me!" width="100%" height="auto" /></a>
+					<a class="shrink" href="aboutme.html"><img src="jump.jpg" alt="me!" width="100%" height="auto" /></a>
 					<h2>about me</h2>
 				</div>
 				<br>
 				<div class="col span_1_of_3">
-					<a class="shrink" href="404.html"><img src="berk2.jpg" alt="Berkeley" width="100%" height="auto" /></a>
+					<a class="shrink" href="404.html"><img src="berkwee.jpg" alt="Berkeley" width="100%" height="auto" /></a>
 					<h3>education and projects</h3>
 				</div>
 				<br>
