--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
 		<div id="sections">
 			<div class="section group">	
 				<div class="col span_1_of_3">			
-					<a class="shrink" href="aboutme.html"><img src="jump!.jpg" alt="me!" width="40%" height="auto" /></a>
-					<h2>about me</h2>
+					<a class="shrink" href="aboutme.html"><img src="jump!.jpg" alt="me!" width="35%" height="auto" /></a>
+					<h2>•about me•</h2>
 				</div>
 				<br>
 				<div class="col span_1_of_3">
-					<a class="shrink" href="404.html"><img src="berk!.jpg" alt="Berkeley" width="40%" height="auto" /></a>
-					<h3>education and projects</h3>
+					<a class="shrink" href="404.html"><img src="berk!.jpg" alt="Berkeley" width="35%" height="auto" /></a>
+					<h3>•education and projects•</h3>
 				</div>
 				<br>
 				<div class="col span_1_of_3">
-					<a class="shrink" href="blog.html"><img src="roma!.jpg" alt="pontegaribaldi" width="40%" height="auto" /></a>
-					<h4>travels abroad</h4>	
+					<a class="shrink" href="blog.html"><img src="roma!.jpg" alt="pontegaribaldi" width="35%" height="auto" /></a>
+					<h4>•travels abroad•</h4>	
 				</div>
 				<br>
 			</div>
