--- a/blog.html
+++ b/blog.html
@@ -23,5 +23,14 @@
 		<br>
 		<HR COLOR = "gray" WIDTH="80%">
 		<h3>MY FIRST WEEK (AND A HALF)</h3>
-		<p>After a week and a half in Rome I finally had time to start writing (aka mostly posting pictures and writing bullet points)! Here is an overview of my first 11 days in my new home for the next four months.</p>
-
+		<p>After a week and a half in Rome I finally had time to start writing (aka mostly posting pictures and writing bullet points)! Below is an overview of my first 11 days in my home for the next four months.</p>
+		<span style="float:left;width:20%; margin-left:10em; padding-bottom:1em">
+			<img src="forblog/IMG_6750.jpg" width="320" height="480" />
+		</span>
+		<span style="float:right; width:40%; align: left; margin-right:10em;">
+				<pre><span style="float:right; font-family: 'Open Sans', sans-serif; display:block; font-size: 15px">
+				DAY 1:
+					• 6am flight SAN->ATL->FCO
+					• Arrived in Rome with all my luggage (contrary to my parents worry that my luggage would be stolen)
+					• Raychel ended up being my roommate!</span></pre>
+			</span>
