--- a/blog.html
+++ b/blog.html
@@ -24,15 +24,16 @@
 		<HR COLOR = "gray" WIDTH="80%">
 		<h3>MY FIRST WEEK (AND A HALF)</h3>
 		<p>After a week and a half in Rome I finally had time to start writing (aka mostly posting pictures and writing bullet points)! Below is an overview of my first 11 days in my home for the next four months.</p>
-		<div class="person1" style="float:left; display:inline-block; ">
-			<span style="float:left;width:20%; margin-left:10em; padding-bottom:1em">
+
+		<div style="float:left; display:inline-block; ">
+			<span style="float:left; width:20%; margin-left:10em; padding-bottom:1em">
 				<img src="forblog/IMG_6750.jpg" width="300" height="400" />
 			</span>
-			<span style="float:right; width:40%; align: left; margin-right:10em;">
-				<pre><span style="float:right; font-family: 'Open Sans', sans-serif; display:block; font-size: 15px">
+			<span style="float:right; width:40%; margin-right:10em;">
+				<p style="float:right; display:block; font-weight:BOLD">
 				DAY 1:
 					• 6am flight SAN->ATL->FCO
 					• Arrived in Rome with all my luggage (contrary to my parents worry that my luggage would be stolen)
-					• Raychel ended up being my roommate!</span></pre>
+					• Raychel ended up being my roommate!</span></p>
 			</span>
 		</div>
