--- a/blog.html
+++ b/blog.html
@@ -25,17 +25,12 @@
 		<h3>MY FIRST WEEK (AND A HALF)</h3>
 		<p>After a week and a half in Rome I finally had time to start writing (aka mostly posting pictures and writing bullet points)! Below is an overview of my first 11 days in my home for the next four months.</p>
 
-		<div style="float:left; display:inline-block; ">
 			<span style="float:left; width:40%; margin-left:6em; padding-bottom:1em">
-				<img src="forblog/IMG_6750.jpg" width="300" height="400" />
+				<img src="forblog/IMG_6750.jpg" width="500" height="700" />
 			</span>
 			<span style="float:right; width:40%; margin-right:6em; padding-bottom:1em">
-				<img src="forblog/IMG_6771.jpg" width="300" height="400" />
+				<img src="forblog/IMG_6771.jpg" width="500" height="700" />
 			</span>
-			<span style="float:right; width:40%; margin-right:10em;">
-				<p style="float:right; display:block; font-weight:BOLD">
-				• SAN->ATL->FCO
-				• Arrived in Rome with all my luggage (contrary to my parents worry that my luggage would be stolen)
-				• Raychel ended up being my roommate!</span></p>
-			</span>
-		</div>
+				<p> • SAN->ATL->FCO</p>
+				<p>• Arrived in Rome with all my luggage (contrary to my parents worry that my luggage would be stolen)</p>
+				<p>• Raychel ended up being my roommate!</p>
