--- a/blog.html
+++ b/blog.html
@@ -24,6 +24,9 @@
 		<HR COLOR = "gray" WIDTH="80%">
 		<h3>MY FIRST WEEK (AND A HALF)</h3>
 		<p>After a week and a half in Rome I finally had time to start writing (aka mostly posting pictures and writing bullet points)! Below is an overview of my first 11 days in my home for the next four months.</p>
+			<p style="marigin-right: 8em"> • SAN->ATL->FCO</p>
+			<p style="marigin-right: 8em">• Arrived in Rome with all my luggage (contrary to my parents worry that my luggage would be stolen)</p>
+			<p style="marigin-right: 8em">• Raychel ended up being my roommate!</p>
 
 			<span style="float:left; width:40%; margin-left:6em; padding-bottom:1em">
 				<img src="forblog/IMG_6750.jpg" width="480" height="600" alt="passport"/>
@@ -32,6 +35,3 @@
 				<img src="forblog/IMG_6771.jpg" width="480" height="600" alt="fiumeday" />
 			</span>
 			<br>
-				<p> • SAN->ATL->FCO</p>
-				<p>• Arrived in Rome with all my luggage (contrary to my parents worry that my luggage would be stolen)</p>
-				<p>• Raychel ended up being my roommate!</p>
